objects/Pen__c.object
<CustomObject>
    <fields>
        <fullName>CF1__c</fullName>
        <label>CF1</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF2__c</fullName>
        <label>CF2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF3__c</fullName>
        <label>CF3</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <label>Pen</label>
    <nameField>
        <label>Pen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>